--- a/style.css
+++ b/style.css
@@ -6,10 +6,15 @@ body, html{
     margin: 0;
 }
 
-/* H1,H2,H3 Sizing & Weight */
+/* Typography Styling*/
 h1{
     font-weight: 700;
     font-size: 50px;
+}
+h2{
+    font-weight: bolder;
+    font-size: 45px;
+
 }
 h3{
     font-weight: bold;
@@ -19,21 +24,26 @@ h4{
     font-weight: bold;
     font-size: 20px;
 }
+p{
+    font-size: 30px;
+    font-weight: bold;
+    margin: 30px 0;
+}
 
 /* Banner & Wrapper */
 .wrapper{
-    width: 960;
     margin: 0 auto;
+    width: 960;
 }
 .hero-banner{
     background: #af7ac5;
-    min-height: 100vh;
+    min-height: 90vh;
     padding: 50px 20px;
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
-
-}.hero-banner h1{
+}
+.hero-banner h1{
     color: white;
     margin: 25px 0;
 }
@@ -93,3 +103,71 @@ button.cta.alt{
     outline-color: rgba(0,0,0,.15);
     color: #111111;
 }
+
+/* Nav. Bar */
+nav{
+    height: 100px;
+    background-color: white;
+    box-shadow: 0 5px 8px rgba(0,0,0,.2);
+    position: sticky; top: 0;
+}
+nav .logo{
+    display: block;
+    width: 300px;
+    height: 40px;
+    position: absolute; top: 50%; left: 0;
+    margin-top: -20px;
+    margin-left: 30px;
+    background: url(img/logo.png) no-repeat 0 0;
+    background-size: 100%;
+    overflow: hidden;
+    text-indent: -999px;
+}
+nav ul li{
+    margin: 0;
+    padding: 0;
+    display: block;
+    float: right;
+}
+nav ul li a{
+    display: block;
+    height: 100%;
+    box-sizing: border-box;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #111111;
+    text-decoration: none;
+    padding: 35px 10px;
+    line-height: 30px;
+}
+
+/* More info */
+.more-info{
+    text-align: center;
+}
+.more-info h2{
+    margin: 50px 0 0;
+}
+.more-info p{
+    margin: 18px 0 35px;
+}
+
+.highlight{
+    background-color: #af7ac5;
+    color: #00ff4c;
+    padding: 5px 5px;
+    line-height: 50px;
+    display: inline;
+    font-weight: bold;
+}
+
+
+
+/* <div class="more-info" id="more-info">
+<h2>Join our club!</h2>
+<p>
+Every week we have a <span class="highlight">Party.</span>. If you want in on that, then join our club.
+There will be cake and soft drinks! Sometimes we have movie nights and popcorn!</p>
+<button class="cta">Sign me up!</button>
+</div> */
