--- a/style.css
+++ b/style.css
@@ -208,12 +208,11 @@ nav ul li a{
 .nb-list li.red{background-color: #FF3300;}
 .nb-list li.pink{background-color: #FFADF9;}
 .nb-list li.salmon{background-color: #FA8072;}
-
 .nb-list li.dragging{
     position: absolute; 
     top: 100px;
-    left: 70px;
-    right: -30px;
+    left: 65px;
+    right: -20px;
     rotate: 6deg;
     box-shadow: 0 2px 14px rgba(0,0,0,.3);
 }
@@ -244,4 +243,94 @@ footer{
 }
 footer a{
     color: rgba(0,0,0,.4);
+}
+
+/* Popup */
+.popup{
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+}
+.popup.show{
+    display: block;
+}
+.popup .blanket{
+    background-color: rgba(0,0,0,.7);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.popup .content{
+    box-sizing: border-box;
+    padding: 30px 40px;
+    width: 960px;
+    height: 500px;
+    background-color: white;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-top: -250px;
+    margin-left: -540px;
+}
+.popup h2{
+    margin: 10px 0 20px;
+}
+.popup .cta{
+    margin-top: 40px;
+}
+.popup .close{
+     width: 80px;
+     height: 80px;
+     background: #FF3300 url(img/X-Icon.png) no-repeat center center;
+     background-size: 50%;
+     position: absolute;
+     top: -40px;
+     right: -40px;
+     border-radius: 50%;
+     border: none;
+     outline: none;
+     overflow: hidden;
+     text-indent: -999px;
+     cursor: pointer;
+}
+.popup .close:hover{
+    background-color: #9e2203
+}
+
+.popup .row::after{
+    content: '';
+    display: table;
+    clear: both;
+}
+.popup .item{
+    float: left;
+    width: 415px;
+    margin-left: 40px;
+    text-align: left;
+}
+.popup .item:first-child{
+    margin: 0;
+}
+.popup .item label{
+    display: block;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.popup .item input[type='text']{
+    display: block;
+    font-size: 30px;
+    font-weight: bold;
+    border: 4px solid #111111;
+    height: 70px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 15px 20px;
 }
